Diagnostics: commit from CLI

--- a/index.html
+++ b/index.html
@@ -11,18 +11,23 @@
         <div class="content">
             <h1 class="title">💖 Valentine's Day 💖</h1>
             <div class="question">
-                <p>จะไปเดทกับเราวันวาเลนไทน์มั้ย? 🌹</p>
+                <p>น้องฮาฟจะไปเดท</p>
+                <p>กับพี่วันวาเลนไทน์มั้ยต้ะ? 🌹</p>
             </div>
             <div class="gif-container">
                 <img src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExcWQ3ZzZkZjJ0dW5qN3c5ZHVxZjFxN3p3MHN0Ym5yYnV5MWJ2dXN1ZyZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/MDJ9IbxxvDUQM/giphy.gif" alt="Cute Valentine" class="cute-gif">
             </div>
             <div class="buttons">
-                <button id="yesBtn" class="yes-btn">Yes! 💕</button>
-                <button id="noBtn" class="no-btn">No 😢</button>
+                <div>
+                    <button id="yesBtn" class="yes-btn">Yes! 💕</button>
+                </div>
+                <div>
+                    <button id="noBtn" class="no-btn">No 😢</button>
+                </div>
             </div>
         </div>
         <div id="successMessage" class="success-message hidden">
-            <h2>🎉 ยินดีด้วย! 🎉</h2>
+            <h2>🎉 น่ารักมาก! 🎉</h2>
             <p>แล้วเจอกันวันวาเลนไทน์นะ! 💖</p>
             <div class="hearts">💕 💖 💗 💓 💝</div>
         </div>
